fix: subnav and share button visible, restyle subnav title

--- a/src/components/DocPage/DocPage.scss
+++ b/src/components/DocPage/DocPage.scss
@@ -343,3 +343,9 @@
     }
     /* stylelint-enable declaration-no-important */
 }
+
+.mobile {
+    .dc-doc-page__aside {
+        position: relative;
+    }
+}
